--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -4,47 +4,45 @@
     "usuario usuario"
     "senha icone"
     "botao__login botao__login"
-    "botao__registrar botao__registrar";
+    "botao__registrar botao__registrar"
+    "erro-usuario erro-usuario";
     grid-template-columns: 23rem auto;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .input__usuario{
     grid-area: usuario;
+    grid-column: 1/2;
+    grid-row:1/1;
 }
 
 .input__senha{
-    grid-area: senha;  
+    grid-area: senha;
+    grid-column: 1/2;
+    grid-row: 2/2;  
 }
 
 .icone__senha{
     grid-area: icone;
-    grid-row: 2/2;
     grid-column: 2/3;
+    grid-row: 2/2;
 }
 
 .botao__login{
     grid-area: botao__login;
-    grid-row: 3/3;
     grid-column: 1/3;
-    margin: auto;
+    grid-row: 3/3;
 }
 
 .botao__registrar{
     grid-area: botao__registrar; 
-    grid-row: 4/4;
     grid-column: 1/3;
-    margin: auto;  
+    grid-row: 4/4;
 }
 
 .mensagem__erro--usuario{
     grid-area: erro-usuario;
-    grid-row: 5/5;
     grid-column:1/3;
+    grid-row: 5/5;
 }
 
-.mensagem__erro--senha{
-    grid-area: erro-senha;
-    grid-row: 6/6;
-    grid-column:1/3;
-}
