--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -4,9 +4,10 @@
     "usuario usuario"
     "senha icone"
     "nome nome"
-    "botao__registrar botao__registrar";
-    grid-template-columns: 23rem 2.5rem;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    "botao__registrar botao__registrar"
+    "erro-usuario erro-usuario";
+    grid-template-columns: 23rem auto;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .registro__usuario{
@@ -32,3 +33,11 @@
     grid-column: 1/3;
     margin: auto;  
 }
+
+.mensagem__erro--usuario{
+    grid-area: erro-usuario;
+    grid-column:1/3;
+    grid-row: 5/5;
+    margin: auto;
+}
+
