--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -2,42 +2,13 @@
 @import url(_variaveis.css);
 
 body {
-	background-color: var(--cor-secundaria);
-	color: var(--cor-contraste-escuro);
+	background-color: var(--cor-branca);
+	color: var(--cor-preta);
 	font-family: var(--fonte-familia-corpo);
-	overflow-x: hidden;
 	height: 80vh;
-	width: 100vw;
+	width: 10vw;
+	padding: 6rem;
+	
 }
 
-.container { 
-	padding-right: 1rem;
-	padding-left: 1rem;
-}
 
-.flex {
-	display: flex;
-}
-
-.flex--centro {
-	align-items: center;
-	justify-content: center;
-}
-
-.flex--coluna {
-	flex-direction: column;
-}
-
-@media(min-width: 800px) {
-  .container {
-		padding-right: 2.5rem;
-		padding-left: 2.5rem;	
-	}
-}
-
-@media(min-width: 1200px) {
-	.container {
-		padding-left: calc((100vw - 900px)/2);
-		padding-right: calc((100vw - 900px)/2);
-	}
-}
